Fixed  contact Us layout and added extra section in it.
Thanks to @ Akshaj

--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -65,154 +65,213 @@ input[type=submit]:hover {
 
 </body>
 </html> -->
-
-
 <!---   the above code is commented out if ness... then take youe eyes on that-->
-
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Contact Us</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-        }
+    <head>
+        <link rel="shortcut icon" type="png" href="images/icon/favicon.png">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Contact Us</title>
+        <link rel="stylesheet" href="contactus.css">
+    </head>
 
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            margin-top: 50px;
-        }
+    <body>
+        <header class="header">
+            <nav>
+                <div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
+                <ul>
+                    <li><a class="active" href="../index.html">Home</a></li>
+                </ul>
+                <div class="srch"><a href="../search/search.html"><button
+                            class="btn55">SEARCH</button></a></div>
+                <a class="get-started" href="../login.html">Get Started</a>
+                <!-- <img src="../images/icon/menu.png" class="menu" onclick="sideMenu(0)" -->
+                <!-- alt="menu"> -->
+            </nav>
+        </header>
 
-        h1 {
-            text-align: center;
-            margin-top: 0;
-        }
-
-        .person {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .person img {
-            border-radius: 50%;
-            margin-right: 20px;
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-        }
-
-        .person h2 {
-            margin: 0;
-        }
-
-        .person p {
-            margin: 0;
-        }
-
-        .contact-info {
-            margin-left: auto;
-            text-align: right;
-        }
-
-        .contact-info a {
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .contact-info a:last-child {
-            margin-bottom: 0;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <h1>Contact Us</h1>
-        <div class="person">
-            <img src="../images/creator/ak1.jpg" alt="Person 1">
-            <div>
-                <h2>Person 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
+            <div class="container">
+                <h1>Contact Us</h1>
+                <div class="person">
+                    <img src="../images/creator/ak1.jpg" alt="Person 1">
+                    <div>
+                        <h2>N.Karthik Akshaj</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person1@example.com">akshaj_04@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../images/creator/dev1.jpeg" alt="Person 2">
+                    <div>
+                        <h2>Dev Chandra</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person2@example.com">dev14@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../images/creator/KS.jpeg" alt="Person 3">
+                    <div>
+                        <h2>Krishna Sumit</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person3@example.com">sumitk96@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../images/creator/M.jpeg" alt="Person 4">
+                    <div>
+                        <h2>Manish Rawat</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person4@example.com">manish_02@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../images/creator/PKJ.jpeg" alt="Person 5">
+                    <div>
+                        <h2>Praveen Kumar Jaiswal</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person5@example.com">PKjaiswal_69@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
+                <div class="person">
+                    <img src="../images/creator/N.jpeg" alt="Person 6">
+                    <div>
+                        <h2>Nimesh Dutt</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit. Sed cursus, magna eu sagittis
+                            eleifend, quam
+                            magna pellentesque ex, ac lobortis quam sapien
+                            ac elit. </p>
+                    </div>
+                    <div class="contact-info">
+                        <a href="mailto:person6@example.com">Nimesh_RD4_20@gmail.com</a>
+                        <a href="tel:1234567890">123-456-7890</a>
+                    </div>
+                </div>
             </div>
-            <div class="contact-info">
-                <a href="mailto:person1@example.com">person1@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
+        
+
+        <div class="cinf">
+            <p style="font-size: 50px; padding:20px">Any Queries or Bugs?</p>
+            <p style="font-size: 35px; padding:25px">Please Contact us at</p>
+            <p style="font-weight: bold; font-size:25px; padding-left:10px">N.Karthik Akshaj</p>
+            <p style="font-size:15px;padding-left:10px">Team Lead</p>
+            <p style="font-size:15px;padding-left:10px">Email: akshaj_04@gmail.com</p>
+            <p style="font-weight: bold; font-size:20px; padding-left:10px; padding-top: 20px;">Praveen Kumar Jaiswal</p>
+            <p style="font-size:15px;padding-left:10px">Team Co-Lead</p>
+            <p style="font-size:15px;padding-left:10px">Email: PKjaiswal_69@gmail.com</p>
+        </div>
+
+        <div class="diffSection" id="contactus_section">
+            <center><p style="font-size: 50px; padding: 100px">Contact
+                    Us</p></center>
+            <div class="csec"></div>
+            <div class="back-contact">
+                <div class="cc">
+                    <form action="mailto:LCS2022036@iiitl.ac.in"
+                        method="post"
+                        enctype="text/plain">
+                        <label>First Name <span class="imp">*</span></label><label
+                            style="margin-left: 185px">Last Name <span
+                                class="imp">*</span></label><br>
+                        <center>
+                            <input type="text" name=""
+                                style="margin-right:
+                                10px; width: 175px"
+                                required="required"><input type="text"
+                                name="lname" style="width: 175px"
+                                required="required"><br>
+                        </center>
+                        <label>Email <span class="imp">*</span></label><br>
+                        <input type="email" name="mail" style="width:
+                            100%"
+                            required="required"><br>
+                        <label>Message <span class="imp">*</span></label><br>
+                        <input type="text" name="message" style="width:
+                            100%" required="required"><br>
+                        <label>Additional Details</label><br>
+                        <textarea name="additional"></textarea><br>
+                        <button type="submit" id="csubmit">Send Message</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="person">
-            <img src="person2.jpg" alt="Person 2">
-            <div>
-                <h2>Person 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
-            </div>
-            <div class="contact-info">
-                <a href="mailto:person2@example.com">person2@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
-            </div>
-        </div>
-        <div class="person">
-            <img src="person3.jpg" alt="Person 3">
-            <div>
-                <h2>Person 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
-            </div>
-            <div class="contact-info">
-                <a href="mailto:person3@example.com">person3@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
-            </div>
-        </div>
-        <div class="person">
-            <img src="person4.jpg" alt="Person 4">
-            <div>
-                <h2>Person 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
-            </div>
-            <div class="contact-info">
-                <a href="mailto:person4@example.com">person4@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
-            </div>
-        </div>
-        <div class="person">
-            <img src="person5.jpg" alt="Person 5">
-            <div>
-                <h2>Person 5</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
-            </div>
-            <div class="contact-info">
-                <a href="mailto:person5@example.com">person5@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
-            </div>
-        </div>
-        <div class="person">
-            <img src="person6.jpg" alt="Person 6">
-            <div>
-                <h2>Person 6</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, magna eu sagittis eleifend, quam
-                    magna pellentesque ex, ac lobortis quam sapien ac elit. </p>
-            </div>
-            <div class="contact-info">
-                <a href="mailto:person6@example.com">person6@example.com</a>
-                <a href="tel:1234567890">123-456-7890</a>
-            </div>
-        </div>
-    </div>
 
-</body>
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer-container">
+                <div class="left-col">
+                    <img src="../images/icon/logo - Copy.png" style="width:
+                        200px;">
+                    <div class="logo"></div>
+                    <div class="social-media">
+                        <a href="#"><img src="../images/icon\fb.png"></a>
+                        <a href="#"><img src="../images/icon\insta.png"></a>
+                        <a href="#"><img src="../images/icon\tt.png"></a>
+                        <a href="#"><img src="../images/icon\ytube.png"></a>
+                        <a href="#"><img src="../images/icon\linkedin.png"></a>
+                    </div><br><br>
+                    <p class="rights-text">Copyright © 2023 Created By Team KAMP
+                        IV , <br>
+                        All Rights Reserved.</p>
+                    <br><p><img src="../images/icon/location.png"> Indian
+                        Institute Of Information
+                        Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+                    <p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
+                            src="../images/icon/mail.png">&nbsp;
+                        KAMPIV@gmail.com</p>
+                </div>
+                <div class="right-col">
+                    <h1 style="color: #fff">Our Newsletter</h1>
+                    <div class="border"></div><br>
+                    <p>Enter Your Email to get our News and updates.</p>
+                    <form class="newsletter-form">
+                        <input class="txtb" type="email" placeholder="Enter Your Email">
+                        <input class="btn" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </footer>
+
+
+    </body>
 
 </html>
