Major Bug Fixes, Header and Footer Addition
Thanks to @ Dev and @ Akshaj

--- a/ai_ml/ai_ml.html
+++ b/ai_ml/ai_ml.html
@@ -33,7 +33,7 @@
 			<span>Machine Learning and Artificial Intelligence<br>on LearnEd</span>
 			<div class="shortdesc">
 				<p>Learn Machine  languages and concepts to prepare for a career in<br>MACHINE 
-				DESINER</p>
+				DESIGNER</p>
 			</div>
 		</div>
 
