--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -1,71 +1,4 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-</style>
-</head>
-<body>
-
-<h3>Contact us</h3>
-
-<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">level</label>
-    <select id="country" name="country">
-      <option value="australia">good</option>
-      <option value="canada">better</option>
-      <option value="usa">best</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
-  </form>
-</div>
-
-</body>
-</html> -->
-<!---   the above code is commented out if ness... then take youe eyes on that-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -84,7 +17,10 @@ input[type=submit]:hover {
             <nav>
                 <div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
                 <ul>
-                    <li><a class="active" href="../index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../aboutus/about_web.html">About Us</a></li>
+					<li><a class="active" href="../contactus/contactus.html">Contact Us</a></li>
+                    <li><a href="../gallery/gallery.html">Gallery</a></li>
                 </ul>
                 <div class="srch"><a href="../search/search.html"><button
                             class="btn55">SEARCH</button></a></div>
@@ -114,7 +50,7 @@ input[type=submit]:hover {
                 <div class="person">
                     <img src="../images/creator/dev1.jpeg" alt="Person 2">
                     <div>
-                        <h2>Dev Chandra</h2>
+                        <h2>Dev Chandna</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur
                             adipiscing elit. Sed cursus, magna eu sagittis
                             eleifend, quam
