--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -14,25 +14,23 @@
 			<div class="logo"><img src="../images//icon/logo.png" alt="logo"></div>
 			<ul>
 				<li><a  href="../index.html">Home</a></li>
+        <li><a href="../aboutus/about_web.html">About Us</a></li>
+					<li><a href="../contactus/contactus.html">Contact Us</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
 			</ul>
-			<div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="../images//icon/search.png" alt="search" onclick=slide()></div>
+			<div class="srch" ><a href="search/search.html"><button class="btn55" >SEARCH</button></a></div>
 			<a class="get-started" href="../login.html">Get Started</a>
 			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
         <div class="side-menu" id="side-menu">
 			<div class="close" onclick="sideMenu(1)"><img src="../images//icon/close.png" alt=""></div>
 			<div class="user">
-				<img src="/refo1/../images//creator/roshan.jpeg" alt="Username">
-				<p>roshank9419</p>
 			</div>
 			<ul>
-				<li><a href="#about_section">About</a></li>
-				<li><a href="#portfolio_section">Portfolio</a></li>
-				<li><a href="#team_section">Team</a></li>
-				<li><a href="#services_section">Services</a></li>
-				<li><a href="#contactus_section">Contact</a></li>
-				<li><a href="#feedBACK">Feedback</a></li>
+				<li><a  href="../index.html">Home</a></li>
+        <li><a href="../aboutus/about_web.html">About Us</a></li>
+        <li><a href="../contactus/contactus.html">Contact Us</a></li>
+        <li><a class="active" href="gallery.html">Gallery</a></li>
 			</ul>
 		</div>
         <section class="wrapper">
