--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="shortcut icon" type="png" href="images/icon/favicon.png">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>LearnEd</title>
+		<title>refdocs.io</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -30,7 +30,8 @@
 					<li><a href="#portfolio_section">Portfolio</a></li>
 					<li><a href="#team_section">Team</a></li>
 					<li><a href="#services_section">Services</a></li>
-					<li><a href="#contactus_section">Contact</a></li>
+					<li><a href="aboutus/about_web.html">About Us</a></li>
+					<li><a href="contactus/contactus.html">Contact Us</a></li>
 					<li><a href="gallery/gallery.html">Gallery</a></li>
 				</ul>
 				<div class="srch" ><a href="search/search.html"><button class="btn55" >SEARCH</button></a></div>
@@ -55,16 +56,16 @@
 				<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png"
 						alt=""></div>
 				<div class="user">
-					<img src="images/creator/roshan.jpeg" alt="Username">
-					<p>roshank9419</p>
+
 				</div>
 				<ul>
-					<li><a href="#about_section">About</a></li>
+					<li><a class="active" href="">Home</a></li>
 					<li><a href="#portfolio_section">Portfolio</a></li>
 					<li><a href="#team_section">Team</a></li>
 					<li><a href="#services_section">Services</a></li>
-					<li><a href="#contactus_section">Contact</a></li>
-					<li><a href="#feedBACK">Feedback</a></li>
+					<li><a href="aboutus/about_web.html">About Us</a></li>
+					<li><a href="contactus/contactus.html">Contact Us</a></li>
+					<li><a href="gallery/gallery.html">Gallery</a></li>
 				</ul>
 			</div>
 		</header>
@@ -72,15 +73,15 @@
 
 		<!-- Some Popular Subjects -->
 		<div class="title">
-			<center><span>Popular Subjects on LearnEd</span></center>
+			<center><span>Popular Subjects on refdocs.io</span></center>
 		</div>
 		<br><br>
 		<div class="cour">
 			<div class="cbox">
 				<div class="det"><a href="subjects/computer_courses.html"><img
 							src="images/courses/computer.png">Computer Courses</a></div>
-				<div class="det det-last"><a href="subjects/computer_courses.html#projects"><img
-							src="images/courses/projects.png">Projects</a></div>
+				<div class="det det-last"><a href="ai_ml/ai_ml.html"><img
+							src="images/courses/projects.png">Machine Learning</a></div>
 			</div>
 		</div>
 
@@ -294,7 +295,7 @@
 					<div class="rev-cont">
 						<p id="title">Review:</p>
 						<p id="content">
-							LearnEd was an amazing experience for me. I belong to electronics
+							refdocs.io was an amazing experience for me. I belong to electronics
 							department and had a little experience in coding but I think it has
 							helped me think things through in a much more analytical manner. Coding
 							is important no matter which branch you are in. It gives you a better
@@ -384,7 +385,7 @@
 					<h1 style="color: #fff">Our Newsletter</h1>
 					<div class="border"></div><br>
 					<p>Enter Your Email to get our News and updates.</p>
-					<form class="newsletter-form">
+					<form class="newsletter-form" action="#" method="post">
 						<input class="txtb" type="email" placeholder="Enter Your Email">
 						<input class="btn" type="submit" value="Submit">
 					</form>
