--- a/chatgpt/chatgpt.html
+++ b/chatgpt/chatgpt.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>ChatGPT Corner</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="chatgpt.css">
+    <head>
+        <title>ChatGPT Corner</title>
+        <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+        <link rel="stylesheet" href="chatgpt.css">
 
-</head>
-<body>
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand navbar-dark bg-primary">
+                <div class="nav navbar-nav">
+                    <a class="nav-item nav-link" href="../index.html">Homepage</a>
+                    <a class="nav-item nav-link active" href="#" disabled>Chatgpt
+                        Corner <span class="sr-only">(current)</span></a>
+                </div>
+            </nav>
+        </header>
 
-    <nav class="navbar navbar-expand navbar-dark bg-primary">
-        <div class="nav navbar-nav">
-            <a class="nav-item nav-link" href="../index.html">Homepage</a>
-            <a class="nav-item nav-link active" href="#" disabled>Chatgpt Corner <span class="sr-only">(current)</span></a>
-        </div>
-    </nav>
+        <h1 class="title-heading">refdocs.io + CHATGPT : When you want to learn more</h1>
+        <form action="#" id="chat-form" method="post">
+            <input type="text" id="prompt-input">
+            <button type="submit" name="sendRequest"
+                onclick="handleRequest(event)">Send Request</button>
+        </form>
 
-    <h1>refdocs.io + CHATGPT : When you want to learn more</h1>
-    <form action="#" id="chat-form" method="post">
-        <input type="text" id="prompt-input">
-        <button type="submit" name="sendRequest" onclick="handleRequest(event)">Send Request</button>
-    </form>
-
-    <div id="response">
-        <pre>
+        <div id="response">
+            <pre>
         <code class="response-text"></code>
     </pre>
-    </div>
+        </div>
 
-    <script src="chatgpt_config.js"></script>
-    <script>
+        <script src="chatgpt_config.js"></script>
+        <script>
         async function handleRequest(event) {
             event.preventDefault();
             var resp = document.querySelector(".response-text");
@@ -39,7 +45,43 @@
             resp.textContent=response;
         }
     </script>
+        <script src="chatgpt.js"></script>
 
-    <script src="chatgpt.js"></script>
-</body>
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer-container">
+                <div class="left-col">
+                    <img src="../images/icon/logo - Copy.png" style="width:
+                        200px;">
+                    <div class="logo"></div>
+                    <div class="social-media">
+                        <a href="#"><img src="../images/icon\fb.png"></a>
+                        <a href="#"><img src="../images/icon\insta.png"></a>
+                        <a href="#"><img src="../images/icon\tt.png"></a>
+                        <a href="#"><img src="../images/icon\ytube.png"></a>
+                        <a href="#"><img src="../images/icon\linkedin.png"></a>
+                    </div><br><br>
+                    <p class="rights-text">Copyright © 2023 Created By Team KAMP
+                        IV , <br>
+                        All Rights Reserved.</p>
+                    <br><p><img src="../images/icon/location.png"> Indian
+                        Institute Of Information
+                        Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+                    <p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
+                            src="../images/icon/mail.png">&nbsp;
+                        KAMPIV@gmail.com</p>
+                </div>
+                <div class="right-col">
+                    <h1 style="color: #fff">Our Newsletter</h1>
+                    <div class="foot-border"></div><br>
+                    <p>Enter Your Email to get our News and updates.</p>
+                    <form class="newsletter-form">
+                        <input class="txtb" type="email" placeholder="Enter Your Email">
+                        <input class="btn" type="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </footer>
+
+    </body>
 </html>
