--- a/search/search.html
+++ b/search/search.html
@@ -39,6 +39,40 @@
     </div>
 
     <div class="search-results"></div>
+    <footer>
+        <div class="footer-container">
+            <div class="left-col">
+                <img src="../images/icon/logo - Copy.png" style="width:
+                    200px;">
+                <div class="logo"></div>
+                <div class="social-media">
+                    <a href="#"><img src="../images/icon\fb.png"></a>
+                    <a href="#"><img src="../images/icon\insta.png"></a>
+                    <a href="#"><img src="../images/icon\tt.png"></a>
+                    <a href="#"><img src="../images/icon\ytube.png"></a>
+                    <a href="#"><img src="../images/icon\linkedin.png"></a>
+                </div><br><br>
+                <p class="rights-text">Copyright © 2023 Created By Team KAMP
+                    IV , <br>
+                    All Rights Reserved.</p>
+                <br><p><img src="../images/icon/location.png"> Indian
+                    Institute Of Information
+                    Technology , Lucknow <br>Ahmamau,Lucknow - 226002</p><br>
+                <p><img src="../images/icon/phone.png"> +91-1234-567-890<br><img
+                        src="../images/icon/mail.png">&nbsp;
+                    KAMPIV@gmail.com</p>
+            </div>
+            <div class="right-col">
+                <h1 style="color: #fff">Our Newsletter</h1>
+                <div class="foot-border"></div><br>
+                <p>Enter Your Email to get our News and updates.</p>
+                <form class="newsletter-form">
+                    <input class="txtb" type="email" placeholder="Enter Your Email">
+                    <input class="btn" type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </footer>
     <script src="search.js"></script>
 </body>
 </html>
