Some minor link additions

--- a/ai_ml/ai_ml.html
+++ b/ai_ml/ai_ml.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
-		<title>ML AND AI COURSE on LearnEd</title>
+		<title>ML AND AI COURSE</title>
 		<link rel="stylesheet" type="text/css" href="ai_ml.css">
 		<script type="text/javascript" src="ai_ml.js"></script>
 	</head>
@@ -19,6 +19,8 @@
 				<ul id="list-switch">
 					<li><a href="../subjects/computer_courses.html"><img src="../images/courses/computer.png" class="icon">Computer
 							Courses</a></li>
+					<li><a href="#"><img
+							src="../images/courses/projects.png">Machine Learning</a></li>
 				</ul>
 				<div class="search" id="search-switch">
 					<input type="search" placeholder="Search" class="srch"><button
@@ -30,7 +32,7 @@
 
 		<!-- MAIN Heading of Page -->
 		<div class="title">
-			<span>Machine Learning and Artificial Intelligence<br>on LearnEd</span>
+			<span>Machine Learning and Artificial Intelligence<br>on refdocs.io</span>
 			<div class="shortdesc">
 				<p>Learn Machine  languages and concepts to prepare for a career in<br>MACHINE 
 				DESIGNER</p>
@@ -42,7 +44,7 @@
 		<div class="course">
 			<div class="cbox">
 				<div class="det"><a href="#machineLearning">Machine learning (ML) </a></div>
-				<div class="det"><a href="#machineLearning">Artificial  intelligence (AI)</a></div>
+				<div class="det"><a href="#artificial-intelligence">Artificial  intelligence (AI)</a></div>
 			</div>
 
 
@@ -61,7 +63,7 @@
 						</div>
 						<div class="dcard">
 							<div class="fpart"><img src="../images/imgs/ai.png"></div>
-							<a href="#machineLearning"><div class="spart">  AI Course
+							<a href="#artificial-intelligence"><div class="spart">  AI Course
 								</div></a>
 						</div>
 						</div>
@@ -131,7 +133,7 @@
 			</div>
 
 			<!-- videos on AI -->
-			<div class="title2" id="machineLearning">
+			<div class="title2" id="artificial-intelligence">
 				<span>Start Artificial Intelligence tutorial series</span>
 				<div class="shortdesc2">
 					<p>Show your controlled machine strength</p>
@@ -225,6 +227,8 @@
 					</div>
 				</div>
 			</footer>
+
+			
 
 		</body>
 	</html>
