--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div class="cbox">
 				<div class="det"><a href="subjects/computer_courses.html"><img
 							src="images/courses/computer.png">Computer Courses</a></div>
-				<div class="det det-last"><a href="ai_ml/ai_ml.html"><img
+				<div class="det det-last"><a href="login.html"><img
 							src="images/courses/projects.png">Machine Learning</a></div>
 			</div>
 		</div>
@@ -160,7 +160,7 @@
 								out of our own students. What better books can there be than the book of
 								humanity “</p>
 							<div class="duty"></div>
-							<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/"
+							<a href="https://www.linkedin.com/"
 								target="_blank"><button class="btn-dev">Follow +</button></a>
 						</div>
 					</center>
@@ -172,7 +172,7 @@
 							<p>“ The beautiful thing about learning is that no one can take it away
 								from you.The only real failure in life is one not learned from “</p>
 							<div class="duty"></div>
-							<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/"
+							<a href="https://www.linkedin.com/"
 								target="_blank"><button class="btn-akshaj">Follow +</button></a>
 						</div>
 					</center>
@@ -183,7 +183,7 @@
 							<p>“ Learning never exhausts the mind.Education is what survives when
 								what has been learned has been forgotten. “</p>
 							<div class="duty"></div>
-							<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/"
+							<a href="https://www.linkedin.com/"
 								target="_blank"><button class="btn-nimesh">Follow +</button></a>
 						</div>
 					</center>
@@ -195,7 +195,7 @@
 								new skills, insights, and ideas. If they’re not learning, they’re not
 								growing and not moving toward excellence. “</p>
 							<div class="duty"></div>
-							<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/"
+							<a href="https://www.linkedin.com/"
 								target="_blank"><button class="btn-krishna">Follow +</button></a>
 						</div>
 					</center>
@@ -207,7 +207,7 @@
 								everywhere. Education beats the beauty and the youth.Learning is never
 								done without errors and defeat. “</p>
 							<div class="duty"></div>
-							<a href="https://www.linkedin.com/in/roshan-kumar-a18b76179/"
+							<a href="https://www.linkedin.com/"
 								target="_blank"><button class="btn-manish">Follow +</button></a>
 						</div>
 					</center>
