--- a/subjects/computer_courses.html
+++ b/subjects/computer_courses.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
-		<title>Computer Science Courses on LearnEd</title>
+		<title>Computer Science Courses</title>
 		<link rel="stylesheet" type="text/css" href="subjects.css">
 		<script type="text/javascript" src="../script.js"></script>
 	</head>
@@ -19,6 +19,12 @@
 				<ul id="list-switch">
 					<li><a href="#"><img src="../images/courses/computer.png" class="icon">Computer
 							Courses</a></li>
+					<li><a href="../login.html"><img
+							src="../images/courses/projects.png">Machine Learning</a></li>
+					<li><a href="../login.html"><img
+							src="../images/courses/projects.png">Learn with CHATGPT</a></li>
+					<li><a href="../login.html"><img
+						src="../images/courses/projects.png">Docs</a></li>
 				</ul>
 				<div class="search" id="search-switch">
 					<input type="search" placeholder="Search" class="srch"><button
@@ -30,7 +36,7 @@
 
 		<!-- MAIN Heading of Page -->
 		<div class="title">
-			<span>Computer Science Courses<br>on LearnEd</span>
+			<span>Computer Science Courses<br>on refdocs.io</span>
 			<div class="shortdesc">
 				<p>Learn programming languages and concepts to prepare for a career in<br>hardware
 					or software development</p>
