--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -36,11 +36,7 @@
                     <img src="../images/creator/ak1.jpg" alt="Person 1">
                     <div>
                         <h2>N.Karthik Akshaj</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                        <p> “Education is one thing no one can take away from you.Education is the key that unlocks the golden door to freedom.”</p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person1@example.com">akshaj_04@gmail.com</a>
@@ -51,11 +47,7 @@
                     <img src="../images/creator/dev1.jpeg" alt="Person 2">
                     <div>
                         <h2>Dev Chandna</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                            <p>The function of education is to teach one to think intensively and to think critically. Intelligence plus character - that is the goal of true education.</p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person2@example.com">dev14@gmail.com</a>
@@ -66,11 +58,7 @@
                     <img src="../images/creator/KS.jpeg" alt="Person 3">
                     <div>
                         <h2>Krishna Sumit</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                        <p>“A simple but powerful reminder of the positive domino effect a good education can have on many aspects of a person’s life and outlook.” </p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person3@example.com">sumitk96@gmail.com</a>
@@ -81,11 +69,7 @@
                     <img src="../images/creator/M.jpeg" alt="Person 4">
                     <div>
                         <h2>Manish Rawat</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                        <p>“Education is what remains after one has forgotten what one has learned in school.Education is not preparation for life; education is life itself.” </p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person4@example.com">manish_02@gmail.com</a>
@@ -96,11 +80,7 @@
                     <img src="../images/creator/PKJ.jpeg" alt="Person 5">
                     <div>
                         <h2>Praveen Kumar Jaiswal</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                        <p>"What makes a child gifted and talented may not always be good grades in school, but a different way of looking at the world and learning." </p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person5@example.com">PKjaiswal_69@gmail.com</a>
@@ -111,11 +91,7 @@
                     <img src="../images/creator/N.jpeg" alt="Person 6">
                     <div>
                         <h2>Nimesh Dutt</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Sed cursus, magna eu sagittis
-                            eleifend, quam
-                            magna pellentesque ex, ac lobortis quam sapien
-                            ac elit. </p>
+                        <p>“Education is the most powerful weapon which you can use to change the world.Intelligence plus character — that is the goal of true education.”</p>
                     </div>
                     <div class="contact-info">
                         <a href="mailto:person6@example.com">Nimesh_RD4_20@gmail.com</a>
