Added more docs
Bug Fix
Docs

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 					<h1 style="color: #fff">Our Newsletter</h1>
 					<div class="border"></div><br>
 					<p>Enter Your Email to get our News and updates.</p>
-					<form class="newsletter-form" action="#" method="post">
+					<form class="newsletter-form">
 						<input class="txtb" type="email" placeholder="Enter Your Email">
 						<input class="btn" type="submit" value="Submit">
 					</form>
