--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -18,7 +18,7 @@
 					<li><a href="../contactus/contactus.html">Contact Us</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
 			</ul>
-			<div class="srch" ><a href="search/search.html"><button class="btn55" >SEARCH</button></a></div>
+			<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
 			<a class="get-started" href="../login.html">Get Started</a>
 			<img src="../images//icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
