--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 		</div>
 
 		<!-- Reviews by Students -->
-		<div id="makeitfull">
+		<!-- <div id="makeitfull">
 			<a href="#review_section"><img src="images/icon/makeitfull.png"></a>
-		</div>
+		</div> -->
 		<div class="review">
 			<div class="diffSection" id="review_section">
 				<center><p style="font-size: 40px; padding: 100px; padding-bottom: 40px;
