--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -16,71 +16,39 @@
 					<li><a href="../contactus/contactus.html">Contact Us</a></li>
 					<li><a href="../gallery/gallery.html">Gallery</a></li>
 				</ul>
-				<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
+				<div class="srch"><a href="../search/search.html"><button class="btn55">SEARCH</button></a></div>
 				<a class="get-started" href="../login.html">Get Started</a>
 			</nav>
 		</header>
 		<h1 class="head-container">ABOUT US</h1>
-<!-- <div class="head-container"> -->
-			<div class="manish">
+		<!-- <div class="head-container"> -->
+		<div class="manish">
 			<div style="margin:0px 0px 25px 7px ;">
-				<p>Our main goal for creating this website is to make education
-					free and more easy and understanding way. Through this website
-					we want to achieve and make sure that every student is receiving
-					quality education free of cost. Our Free online study resources
-					provide access to a wide range of learning materials. These resources
-					include online courses, video lectures and study materials. We offer a
-					vast library of free courses covering various topics Here we also take care
-					of
-					wealth of educational content and language learning resources. Overall, We
-					offer a
-					convenient, free and better way to learn new skills and acquire knowledge
-					from the comfort of your own home. </p>
+				<p>Our website aims to enhance education accessibility by offering free,
+					comprehensive study resources. Students can access a diverse range of
+					educational content, including online courses, video lectures, and study
+					materials. We provide an extensive library of free courses on various
+					subjects, along with instructional content and language learning tools. Our
+					platform offers a convenient and effective way to acquire new skills and
+					knowledge from the comfort of your home. </p>
 				<br>
 				<div style="display: flex;">
-					<p>Any student can access a vast range of material which are absolutely
-						free to use and can gain knowledge
-						by using various things which we provided and this website is developed on
-						sole purpose of making learning
-						easier and can help students to gain knowledge in fun and effective way.
-						we provide Easy online learning which
-						has become increasingly popular in recent years, providing individuals
-						with the flexibility and convenience to learn
-						at their own pace and schedule. With a variety of platforms and resources
-						available, we make it easier to access educational
-						content on a range of topics. we offer a wide range of benefits such as
-						the ability to learn from anywhere, interactive tools
-						and the ability to connect with a global community of learners. Overall,
-						the way we provide is a great way to enhance skills,
-						gain new knowledge, and pursue personal and professional development.</p>
+					<p>Students can freely access a wide range of materials available on our
+						website, providing them with valuable information. Our website was
+						specifically designed to simplify the studying process and make it
+						enjoyable and effective for students. We offer a user-friendly online
+						learning experience, which has gained significant popularity due to its
+						flexibility and convenience. By providing various platforms and tools, we
+						ensure that instructional information on numerous topics is easily
+						accessible to all learners.
+						Our services offer numerous benefits, such as the flexibility to study
+						from any location, interactive tools for enhanced learning, and the
+						opportunity to connect with a global community of learners. In summary,
+						our platform provides an exceptional way to enhance skills, acquire new
+						knowledge, and pursue personal and professional development.</p>
 					<img src="../images/imgs/ai.png" alt="svg" style=" width:20rem;">
 				</div>
 				<br>
-				<p>In this website we also used firebase authentication for login purposes.
-					Firebase Authentication is a
-					service by Google's Firebase platform that simplifies user authentication
-					in apps. Users can log in
-					using email, password, phone number, or third-party providers like Google
-					or Facebook. After authentication,
-					user data can be retrieved from the Firebase Authentication SDK. The SDK
-					provides easy-to-use methods for sign-in
-					and managing user sessions, ensuring data security. Overall, Firebase
-					Authentication offers a convenient and secure
-					way to implement user authentication in your app</p>
-				<br>
-				<p>In this website we also used ChatGPT for the users to explore more and in
-					efficient way ChatGPT is a large language
-					model developed by OpenAI that can engage in natural language conversations
-					with humans. ChatGPT is trained on a diverse
-					range of texts, enabling it to understand and respond to a wide variety of
-					topics. ChatGPT uses deep learning algorithms and
-					natural language processing techniques to generate human-like responses to
-					user inputs. Overall, ChatGPT provides an accessible
-					and convenient way to get answers to questions or engage in conversational
-					experiences. With the help of ChatGPT user can dive into
-					various things which helps the user to learn new thinhs and get clarified
-					from almost all of the doubts in an short amount of time which
-					is most required in online study</p>
 			</div>
 		</div>
 
