edited a bit in nav bar still need to work on it

--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -11,18 +11,20 @@
 			<nav>
 				<div class="logo"><img src="../images/icon/logo.png" alt="logo"></div>
 				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a class="active" href="#">About Us</a></li>
+					<li><a class="active" href="../index.html">Home</a></li>
+					<li><a href="../aboutus/about_web.html">About Us</a></li>
 					<li><a href="../contactus/contactus.html">Contact Us</a></li>
 					<li><a href="../gallery/gallery.html">Gallery</a></li>
 				</ul>
-				<div class="srch"><a href="../search/search.html"><button class="btn55">SEARCH</button></a></div>
+				<div class="srch" ><a href="../search/search.html"><button class="btn55" >SEARCH</button></a></div>
 				<a class="get-started" href="../login.html">Get Started</a>
+				<!-- <img src="../images/icon/menu.png" class="menu" onclick="sideMenu(0)"
+					alt="menu"> -->
 			</nav>
 		</header>
 		<h1 class="head-container">ABOUT US</h1>
 		<!-- <div class="head-container"> -->
-		<div class="manish">
+		<div class="context">
 			<div style="margin:0px 0px 25px 7px ;">
 				<p>Our website aims to enhance education accessibility by offering free,
 					comprehensive study resources. Students can access a diverse range of
