minor changes again

--- a/aboutus/about_web.html
+++ b/aboutus/about_web.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
-		<title>About Us</title>
+		<title class="logo">About Us</title>
 		<link rel="stylesheet" type="text/css" href="about_web.css">
 	</head>
 	<body>
@@ -22,7 +22,7 @@
 					alt="menu"> -->
 			</nav>
 		</header>
-		<h1 class="head-container">ABOUT US</h1>
+		<h1 class="head-container"><b>ABOUT US</b></h1>
 		<!-- <div class="head-container"> -->
 		<div class="context">
 			<div style="margin:0px 0px 25px 7px ;">
