Fixed margin in Contact Us page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				<div class="svg-image">
 					<img src="images/extra/svg1.jpg" alt="svg">
 				</div>
-			</div>
-			<div class="side-menu" id="side-menu">
+			</div>	
+			<div class="side-menu" id="side-menu" style="visibility: hidden;">
 				<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png"
 						alt=""></div>
 				<div class="user">
